--- a/src/app/shared/components/main/profile/profilereels/profilereels.component.html
+++ b/src/app/shared/components/main/profile/profilereels/profilereels.component.html
@@ -1,1 +1,7 @@
-<p>profilereels works!</p>
+<!-- <p>profilereels works!</p> -->
+
+<div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1" style="width: 100%;">
+    <div>
+        <h2>Profile Reels</h2>
+    </div>
+</div>
