--- a/src/app/modules/usecases/components/profile/progridposts/progridposts.component.html
+++ b/src/app/modules/usecases/components/profile/progridposts/progridposts.component.html
@@ -4,9 +4,10 @@
             <!-- Bucle for de la primera fila con 3 elementos -->
             <div class="_ac7v _al3n">
                 <div class="_aabd _aa8k _al3l" (mouseover)="this.mouseInfoPost(true)" (mouseleave)="this.mouseInfoPost(false)">
+                    <!-- href="/p/CofFv2wodIs/" -->
                     <a
                         class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd"
-                        href="/p/CofFv2wodIs/"
+                        (click)="displayHorizontalWindowSwipePost(true)"
                         role="link"
                         tabindex="0"
                     >
