--- a/src/styles.css
+++ b/src/styles.css
@@ -4169,8 +4169,6 @@ a._aa-z, a._aa-z:visited {
 .xx4vt8u {
   margin-top: 48px;
 }
-
-
 ._aa6g {
   align-items: stretch;
   border: 0;
@@ -4185,4 +4183,343 @@ a._aa-z, a._aa-z:visited {
   padding-top: calc(6vh);
   position: relative;
   vertical-align: baseline;
+}
+
+/* CSS Account edit */
+._afws {
+  border: 0;
+  color: rgb(var(--ig-primary-text));
+  font: inherit;
+  font-size: var(--system-24-font-size);
+  font-weight: var(--font-weight-system-semibold);
+  line-height: var(--system-24-line-height);
+  margin-left: 24px;
+  margin-top: 24px;
+}
+
+
+div ._ab82 {
+  margin: 30px auto 0;
+}
+._ab81 {
+  background-color: rgb(var(--ig-primary-background));
+  border: 1px solid rgb(var(--ig-elevated-separator));
+  border-radius: 3px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  justify-content: stretch;
+  margin: 60px auto 0;
+  max-width: 935px;
+  overflow: hidden;
+  width: 100%;
+}
+._ab85 {
+    border-right: 1px solid rgb(var(--ig-elevated-separator));
+    display: flex;
+    flex-basis: 240px;
+    flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+._ab83 {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex: 1 1 400px;
+  flex-direction: column;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  min-width: 50px;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+._aav5 {
+  width: 236px;
+}
+._aav4 {
+  background-color: rgb(var(--ig-primary-background));
+}
+
+._afgk {
+  color: rgb(var(--ig-primary-text));
+  font-size: 24px;
+  padding-top: 32px;
+  padding-left: 45px;
+}
+
+._ab4f {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  justify-content: flex-start;
+  margin: 32px 0 0;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+._ab43 {
+  align-items: stretch;
+  border: 0;
+  display: flex;
+  flex-direction: column;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  margin-bottom: 16px;
+  margin-top: 16px;
+  padding: 0;
+  vertical-align: baseline;
+}
+.xjv05ge {
+  margin-top: 28px;
+}
+.x8vdgqj {
+  margin-left: 32px;
+}
+._ab86, ._ab86:visited, ._ab86:hover, ._ab86:active {
+  color: rgb(var(--ig-primary-text));
+}
+._ad7z {
+  padding-block: 16px;
+  padding-inline-start: 30px;
+  padding-inline-end: 16px;
+}
+
+._ab87 {
+  border-left-color: rgb(var(--ig-secondary-button))!important;
+  font-weight: var(--font-weight-system-semibold);
+}
+
+._acl0 {
+  border: 0;
+  color: rgb(var(--ig-primary-text));
+  font: inherit;
+  font-size: var(--system-24-font-size);
+  font-weight: var(--font-weight-system-regular);
+  line-height: var(--system-24-line-height);
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
+}
+._ab4g {
+    align-items: stretch;
+    border: 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    font: inherit;
+    font-size: 100%;
+    height: 38px;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    vertical-align: baseline;
+    width: 38px;
+}
+._ab4h {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: column;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  margin-right: 20px;
+  overflow-x: hidden;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+._ac69 {
+  display: none!important;
+}
+._ab3p {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 16px;
+}
+._ad6_ {
+    box-sizing: border-box;
+    color: rgb(var(--ig-primary-text));
+    flex: 0 0 194px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 18px;
+    margin-top: 6px;
+}
+._ab3t {
+    align-items: stretch;
+    border: 0;
+    box-sizing: border-box;
+    color: rgb(var(--ig-primary-text));
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    flex-shrink: 0;
+    font: inherit;
+    font-size: 16px;
+    justify-content: flex-start;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    vertical-align: baseline;
+}
+._ac4d:disabled {
+  background-color: rgb(var(--ig-highlight-background));
+  border-color: rgb(var(--ig-separator));
+  color: rgb(var(--ig-secondary-text));
+  cursor: not-allowed;
+}
+._ab3_ {
+  background: transparent;
+  border: 1px solid rgb(var(--ig-stroke));
+  border-radius: 3px;
+  box-sizing: border-box;
+  color: rgb(var(--ig-primary-text));
+  flex: 0 1 355px;
+  font-size: 16px;
+  height: 32px;
+  padding: 0 10px;
+  width: 100%;
+}
+._ac4d {
+  -webkit-appearance: none;
+}
+._ab3q {
+  font-size: 16px;
+  font-weight: 600;
+  vertical-align: baseline;
+}
+._ab44 {
+  background: transparent;
+  border: 1px solid rgb(var(--ig-stroke));
+  border-radius: 3px;
+  box-sizing: border-box;
+  color: rgb(var(--ig-primary-text));
+  flex: 0 1 355px;
+  font-size: 16px;
+  height: 60px;
+  padding: 6px 10px;
+  resize: vertical;
+}
+
+._acao._acat, a._acao._acat, a._acao._acat:visited {
+  color: rgb(var(--ig-secondary-button));
+  background-color: transparent;
+}
+._acat, a._acat, a._acat:visited {
+  border: none;
+  color: rgb(var(--web-always-black));
+  background-color: rgb(var(--ig-secondary-button-background));
+}
+
+._ab3x {
+  background: transparent;
+  border: 1px solid rgb(var(--ig-stroke));
+  border-radius: 3px;
+  box-sizing: border-box;
+  color: rgb(var(--ig-primary-text));
+  flex: 0 1 355px;
+  font-size: 16px;
+  height: 32px;
+  padding: 0 10px;
+  width: 100%;
+}
+
+._ab46 {
+  align-items: stretch;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  margin: 6px 0;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+._aahc {
+  color: rgb(var(--ig-primary-text));
+  font-weight: var(--font-weight-system-semibold);
+}
+._aahb {
+  align-items: center;
+  color: rgb(var(--ig-secondary-text));
+  display: flex;
+  font-size: var(--system-14-font-size);
+  font-weight: var(--font-weight-system-regular);
+  line-height: var(--system-14-font-size);
+}
+._aahe {
+  left: -9999px;
+  position: absolute;
+}
+._aahg {
+  border: 1px solid rgb(var(--ig-stroke));
+  border-radius: 3px;
+  box-sizing: border-box;
+  display: inline-block;
+  height: 16px;
+  margin: 0 8px 0 3px;
+  position: relative;
+  width: 16px;
+}
+._ab41, ._ab41:hover, ._ab41:visited {
+  color: rgb(var(--ig-primary-button));
+}
+._ab41 {
+  display: inline-block;
+  margin-left: 6px;
+}
+._ab47 {
+  align-items: center;
+  border: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  flex-shrink: 0;
+  font: inherit;
+  font-size: 100%;
+  margin: 0;
+  margin-top: 16px;
+  padding: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+.x1ks1olk {
+  opacity: .7;
+}
+
+
+input, select, textarea {
+  background-color: #fff;
+  color: #1c1e21;
+}
+
+textarea {
+  max-width: 100%;
+}
+textarea, .inputtext, .inputpassword {
+  -webkit-appearance: none;
+  border: 1px solid #ccd0d5;
+  border-radius: 0;
+  margin: 0;
+  padding: 3px; 
 }
