--- a/src/app/shared/components/main/nav/sidebarsearch/sidebarsearch.component.html
+++ b/src/app/shared/components/main/nav/sidebarsearch/sidebarsearch.component.html
@@ -27,7 +27,7 @@
                     <div class="_abo1">
                         <!-- Bucle For list item start -->
                         <ng-container *ngFor="let item of this.data">
-                            <div role="none">
+                            <div role="none" (mouseover)="mouseover(true)" (mouseleave)="mouseover(false)" [ngClass]="this.hover ? '_abn_' : ''">
                                 <a class="x1i10hfl x1qjc9v5 xjbqb8w xjqpnuy xa49m3k xqeqjp1 x2hbi6w x13fuv20 xu3j5b3 x1q0q8m5 x26u7qi x972fbf xcfux6l x1qhh985 xm0m39n x9f619 x1ypdohk xdl72j9 x2lah0s xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x2lwn1j xeuugli xexx8yu x4uap5 x18d9i69 xkhd6sd x1n2onr6 x16tdsg8 x1hl2dhg xggy1nq x1ja2u2z x1t137rt x1q0g3np x87ps6o x1lku1pv x1a2a7pz xh8yej3 x193iq5w x1lliihq x1dm5mii x16mil14 xiojian x1yutycm" role="link" tabindex="0">
                                     <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh xxbr6pl xbbxn1n xwib8y2 x1y1aw1k x1uhb9sk x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
                                         <div class="x9f619 x1n2onr6 x1ja2u2z x1qjc9v5 x78zum5 xdt5ytf x1iyjqo2 xl56j7k xeuugli">
@@ -73,7 +73,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
