--- a/src/app/modules/usecases/components/feed/feed.component.html
+++ b/src/app/modules/usecases/components/feed/feed.component.html
@@ -13,7 +13,7 @@
                             <!-- / Stories end -->
 
                             <!-- Post Start -->        
-                                <app-posts (mouseOverEvent)="this.mouseOverHeaderPost($event)" ></app-posts>
+                                <app-posts (mouseOverEvent)="this.mouseOverHeaderPost($event)" (usernameEvent)="this.gotToProfile($event)" ></app-posts>
                             <!-- / Post end -->
                         </div>
                     <!-- / === Feed End === -->
@@ -23,8 +23,8 @@
 
                     <!-- === Summary Start  ==== -->
                         <div class="_aak6 _aak9" #asSummary>
-                            <app-linkprofile></app-linkprofile>
-                            <app-suggestions></app-suggestions>
+                            <app-linkprofile (usernameEvent)="this.gotToProfile($event)" ></app-linkprofile>
+                            <app-suggestions (usernameEvent)="this.gotToProfile($event)"></app-suggestions>
                             <app-privacy></app-privacy>
                         </div>
                     <!-- === Summary End  ==== -->
