--- a/src/app/shared/components/main/feed/posts/articlepost/articlepost.component.html
+++ b/src/app/shared/components/main/feed/posts/articlepost/articlepost.component.html
@@ -51,7 +51,7 @@
                                         >
                                             <div class="xt0psk2">
                                                 <div class="xt0psk2">
-                                                    <a  
+                                                    <a  (click)="this.gotToProfile('lujandev')"
                                                         class="x1i10hfl xjqpnuy xa49m3k xqeqjp1 x2hbi6w xdl72j9 x2lah0s xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x2lwn1j xeuugli x1hl2dhg xggy1nq x1ja2u2z x1t137rt x1q0g3np x1lku1pv x1a2a7pz x6s0dn4 xjyslct x1ejq31n xd10rxx x1sy0etr x17r0tee x9f619 x1ypdohk x1i0vuye xwhw2v2 xl56j7k x17ydfre x1f6kntn x2b8uid xlyipyv x87ps6o x14atkfc x1d5wrs8 x972fbf xcfux6l x1qhh985 xm0m39n xm3z3ea x1x8b98j x131883w x16mih1h xt7dq6l xexx8yu x4uap5 x18d9i69 xkhd6sd x1n2onr6 xjbqb8w x1n5bzlp xqnirrm xj34u2y x568u83 x3nfvp2"
                                                     >
                                                         usrname
@@ -286,14 +286,15 @@
                                     <div class="xt0psk2">
                                         <div class="xt0psk2">
                                             <a
+                                                (click)="this.gotToProfile('lujandev')"
                                                 class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz notranslate _a6hd"
                                                 role="link"
                                                 tabindex="0"
                                             >
                                                 <span 
-                                                (mouseover)="this.mouseover(true, 'span-username-content')"
-                                                #asUsernameContentElementRef
-                                                class="_aacl _aaco _aacw _aacx _aad7 _aade">
+                                                    (mouseover)="this.mouseover(true, 'span-username-content')"
+                                                    #asUsernameContentElementRef
+                                                    class="_aacl _aaco _aacw _aacx _aad7 _aade">
                                                     <div
                                                         class="x9f619 xjbqb8w x1rg5ohu x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s x1q0g3np xqjyukv x6s0dn4 x1oa3qoh x1nhvcw1"
                                                     >
@@ -357,7 +358,7 @@
                                         <div class="xt0psk2">
                                             <div class="xt0psk2">
                                                 <a
-                                                    
+                                                    (click)="this.gotToProfile('lujandev')"
                                                     class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz notranslate _a6hd"
                                                     role="link"
                                                     tabindex="0"
