--- a/src/app/shared/components/main/summary/linkprofile/linkprofile.component.html
+++ b/src/app/shared/components/main/summary/linkprofile/linkprofile.component.html
@@ -42,7 +42,7 @@
                                                 class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x16n37ib x1uhb9sk x1plvlek xryxfnj x1iyjqo2 x2lwn1j xeuugli x1q0g3np xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1"
                                             >
                                                 <a
-                                                    href=""
+                                                    (click)="this.gotoProfile('lujandev')"
                                                     class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _aak1 _a6hd"
                                                     role="link"
                                                 >
@@ -62,7 +62,7 @@
                                                     style="line-height: 18px;"
                                                     class="x193iq5w xeuugli x13faqbe x1vvkbs xt0psk2 x1i0vuye xvs91rp xo1l8bm x1roi4f4 x10wh9bi x1wdrske x8viiok x18hxmgj"
                                                 >
-                                                    lujandev
+                                                    Eddy Lujan
                                                 </span>
                                             </div>
                                         </span>
