--- a/src/app/shared/components/util/show-modal-swipe-horizontal/show-modal-swipe-horizontal.component.html
+++ b/src/app/shared/components/util/show-modal-swipe-horizontal/show-modal-swipe-horizontal.component.html
@@ -4,7 +4,7 @@
         <div class="x9f619 x1n2onr6 x1ja2u2z">
             <div class="x78zum5 xdt5ytf xg6iff7 x1n2onr6">
                 <div class="x1ey2m1c xds687c xixxii4 x17qophe x13vifvy x1h0vfkc"></div>
-                <div class="x10l6tqk x160vmok x1eu8d0j x1vjfegm" (click)="this.closeSwipePost(false)" >
+                <div class="x10l6tqk x160vmok x1eu8d0j x1vjfegm" (click)="closeSwipePost(false)" >
                     <div
                         class="x1i10hfl x6umtig x1b1mbwd xaqea5y xav7gou x9f619 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz x6s0dn4 x78zum5 xjbqb8w x1ejq31n xd10rxx x1sy0etr x17r0tee x1ypdohk xl56j7k x1y1aw1k x1sxyh0 xwib8y2 xurb0ha"
                         role="button"
