--- a/src/app/modules/usecases/components/main/main.component.html
+++ b/src/app/modules/usecases/components/main/main.component.html
@@ -1024,7 +1024,7 @@
                 <div>
                     <div>
                         <ng-container *ngIf="this.filter.swipeHorizontalPost">
-                            <app-show-modal-swipe-horizontal></app-show-modal-swipe-horizontal>
+                            <app-show-modal-swipe-horizontal [currentRoute]="this.filter.currentRoute" ></app-show-modal-swipe-horizontal>
                         </ng-container>
                     </div>
                 </div>
