--- a/src/app/shared/components/main/explore/gridposts/gridposts.component.html
+++ b/src/app/shared/components/main/explore/gridposts/gridposts.component.html
@@ -1,8 +1,9 @@
 <!-- Imagen grande float right con 4 fotos más start -->
 <div class="x9f619 xjbqb8w x1lliihq x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
     <div class="_al5u _al5y _ab74">
+        <!-- href="/p/CriRokAAP_I/" -->
         <div class="x9f619 xjbqb8w x1lliihq x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1" style="width: 100%;">
-            <a (click)="displayHorizontalWindowSwipePost(true)" class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _acg7 _a6hd" role="link" tabindex="0" href="/p/CriRokAAP_I/">
+            <a (click)="displayHorizontalWindowSwipePost(true, this.currentRoute)" class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _acg7 _a6hd" role="link" tabindex="0">
                 <div class="_aagu">
                     <div class="_aagv  _al5s">
                         <img class="x5yr21d xu96u03 x10l6tqk x13vifvy x87ps6o xh8yej3" crossorigin="anonymous" decoding="auto" style="object-fit: cover;" sizes="316.9921875px" srcset="https://images.unsplash.com/photo-1500485035595-cbe6f645feb1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80">
@@ -18,7 +19,7 @@
 
     <div class="_al5u">
         <div class="x9f619 xjbqb8w x1lliihq x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1" style="width: 100%;">
-            <a class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _acg7 _a6hd" role="link" tabindex="0" (click)="displayHorizontalWindowSwipePost(true)">
+            <a class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _acg7 _a6hd" role="link" tabindex="0" (click)="displayHorizontalWindowSwipePost(true, this.currentRoute)">
                 <div class="_aagu">
                     <div class="_aagv">
                         <img class="x5yr21d xu96u03 x10l6tqk x13vifvy x87ps6o xh8yej3" crossorigin="anonymous" decoding="auto" style="object-fit: cover;" sizes="316.9921875px" srcset="https://images.unsplash.com/photo-1454372182658-c712e4c5a1db?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80">
@@ -35,7 +36,7 @@
     <div class="_al5u">
         <div class="x9f619 xjbqb8w x1lliihq x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1" style="width: 100%;">
             <a class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _acg7 _a6hd"
-                (click)="displayHorizontalWindowSwipePost(true)"
+                (click)="displayHorizontalWindowSwipePost(true, this.currentRoute)"
                 role="link"
                 tabindex="0"
             >
@@ -61,7 +62,7 @@
     <div class="_al5u">
         <div class="x9f619 xjbqb8w x1lliihq x168nmei x13lgxp2 x5pf9jr xo71vjh x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1" style="width: 100%;">
             <a class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _acg7 _a6hd"
-                (click)="displayHorizontalWindowSwipePost(true)"
+                (click)="displayHorizontalWindowSwipePost(true, this.currentRoute)"
                 role="link"
                 tabindex="0"
             >
@@ -90,7 +91,7 @@
             <!-- href="/p/CrfpSU6Arzg/" -->
             <a
                 class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _acg7 _a6hd"
-                (click)="displayHorizontalWindowSwipePost(true)"
+                (click)="displayHorizontalWindowSwipePost(true, this.currentRoute)"
                 role="link"
                 tabindex="0"
             >
