--- a/src/app/shared/components/main/profile/profileinfo/profileinfo.component.html
+++ b/src/app/shared/components/main/profile/profileinfo/profileinfo.component.html
@@ -29,7 +29,12 @@
         <span class="_ac2a"><span>12</span></span> publicaciones
     </li>
     <li class="xl565be x1m39q7l x1uw6ca5 x2pgyrj">
-        <a class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _alvs _a6hd" href="/lujandev/followers/" role="link" tabindex="0">
+        <!-- href="/lujandev/followers/"  -->
+        <a 
+            (click)="showModalFollower(true)"
+            class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _alvs _a6hd" 
+            role="link" 
+            tabindex="0">
             <span class="_ac2a" title="104"><span>104</span></span> seguidores
         </a>
     </li>
