--- a/src/app/shared/components/util/modal-followers/modal-followers.component.html
+++ b/src/app/shared/components/util/modal-followers/modal-followers.component.html
@@ -30,7 +30,7 @@
                                                     <div class="_ac7b _ac7c"></div>
                                                     <div class="_ac7b _ac7d">
                                                         <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1sxyh0 xurb0ha x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
-                                                            <button class="_abl-" type="button">
+                                                            <button class="_abl-" type="button" (click)="this.filter.showFollowers = false">
                                                                 <div class="_abm0">
                                                                     <svg aria-label="Cerrar" class="x1lliihq x1n2onr6" color="rgb(0, 0, 0)" fill="rgb(0, 0, 0)" height="18" role="img" viewBox="0 0 24 24" width="18">
                                                                         <title>Cerrar</title>
