--- a/src/styles.css
+++ b/src/styles.css
@@ -1157,14 +1157,6 @@ h6 {
   vertical-align: baseline;
 }
 
-.xwib8y2 {
-  padding-bottom: 8px;
-}
-
-.x1y1aw1k {
-  padding-top: 8px;
-}
-
 .x1swvt13 {
   padding-left: 16px;
   padding-top: 2px;
@@ -4690,4 +4682,97 @@ textarea, .inputtext, .inputpassword {
   color: rgba(255, 255, 255, 0.8);
   font-size: 16px;
   font-weight: bold;
+}
+
+/* CSS followers */
+
+._ac76 {
+  align-items: center;
+  border-bottom: 1px solid rgb(var(--ig-elevated-separator));
+  box-sizing: border-box;
+  display: inline-block;
+  height: calc( var(--scrollable-content-header-height) - 1px );
+  position: relative;
+  width: 100%;
+}
+._ac78 {
+  align-items: center;
+  border: 0;
+  color: rgb(var(--ig-primary-text));
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  font: inherit;
+  font-size: var(--system-16-font-size);
+  font-weight: var(--font-weight-system-semibold);
+  justify-content: center;
+  line-height: var(--system-16-line-height);
+  margin: 0;
+  min-width: 0;
+  padding: 0;
+  text-align: center;
+  vertical-align: baseline;
+}
+._ac7d {
+  float: right;
+}
+
+._ac7c {
+  float: left;
+}
+._ac7b {
+  align-items: center;
+  display: flex;
+  flex-basis: 48px;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  position: relative;
+}
+.xwib8y2 {
+  padding-bottom: 8px;
+}
+.x1y1aw1k {
+  padding-top: 8px;
+}
+._acbs {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+._acby {
+  opacity: 1;
+}
+._acbx {
+  font-size: var(--system-16-font-size);
+  line-height: var(--system-16-line-height);
+  padding: 14px 0;
+  text-transform: capitalize;
+}
+._acbw {
+  border-bottom: solid 1px rgb(var(--ig-primary-text));
+  display: flex;
+  flex-basis: 0px;
+  flex-grow: 1;
+  flex-shrink: 1;
+  justify-content: center;
+  opacity: .3;
+  padding: 12px 0;
+}
+._acbv {
+  color: rgb(var(--ig-primary-text));
+  display: block;
+  font-weight: var(--font-weight-system-semibold);
+  text-transform: uppercase;
+  transition: opacity 250ms ease-in-out;
+}
+._aano {
+  border-radius: 12px;
+  display: block;
+  flex-basis: 1;
+  flex-grow: 1;
+  flex-shrink: 1;
+  min-height: 200px;
+  overflow-y: scroll;
+  position: relative;
 }
