--- a/src/app/shared/components/main/feed/posts/articlepost/articlepost.component.html
+++ b/src/app/shared/components/main/feed/posts/articlepost/articlepost.component.html
@@ -154,7 +154,7 @@
                             </button>
                         </span>
                         <span class="_aamx">
-                            <button class="_abl-" type="button">
+                            <button class="_abl-" type="button" (click)="filter.displayHorizontalWindowSwipePost(true, this.currentRoute)">
                                 <div class="_abm0 _abl_">
                                     <span>
                                         <svg
@@ -181,7 +181,7 @@
                             </button>
                         </span>
                         <span class="_aamy">
-                            <button class="_abl-" type="button">
+                            <button class="_abl-" type="button" (click)="filter.showSharepost = true">
                                 <div class="_abm0 _abl_">
                                     <span>
                                         <svg
@@ -260,7 +260,7 @@
                                     class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xvs91rp xo1l8bm x5n08af x10wh9bi x1wdrske x8viiok x18hxmgj"
                                 >
                                     <a
-                                        
+                                        (click)="filter.showLikes = true"
                                         class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd"
                                     >
                                         <span
@@ -333,7 +333,7 @@
                                 class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1e56ztr x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1"
                             >
                                 <a
-                                    
+                                    (click)="filter.displayHorizontalWindowSwipePost(true, currentRoute)"
                                     class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd"
                                     role="link"
                                     tabindex="0"
